@@ -1,49 +1,23 @@
 package ru.bk.artv.vkrattach.config;
 
-import com.nimbusds.jose.JOSEException;
-import com.nimbusds.jose.crypto.DirectDecrypter;
-import com.nimbusds.jose.crypto.DirectEncrypter;
-import com.nimbusds.jose.crypto.MACSigner;
-import com.nimbusds.jose.crypto.MACVerifier;
-import com.nimbusds.jose.jwk.OctetSequenceKey;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import ru.bk.artv.vkrattach.authentication.*;
-import ru.bk.artv.vkrattach.dao.repository.DefaultUserRepository;
-import ru.bk.artv.vkrattach.domain.user.DefaultUser;
 
-import java.text.ParseException;
-import java.util.Arrays;
-import java.util.List;
-
-@Configuration
-@EnableWebSecurity
+//@Configuration
+//@EnableWebSecurity
 public class SecurityConfig {
 
-    @Bean
-    public UserDetailsService userDetailsService(DefaultUserRepository repo) {
-        return login -> {
-            DefaultUser user = repo.findByLoginIgnoreCase((login.toUpperCase()));
-            if (user != null) {
-                return user;
-            }
-            throw new UsernameNotFoundException("User : " + login + " not found");
-        };
-    }
+//    @Bean
+//    public UserDetailsService userDetailsService(DefaultUserRepository repo) {
+//        return login -> {
+//            DefaultUser user = repo.findByLoginIgnoreCase((login.toUpperCase()));
+//            if (user != null) {
+//                return user;
+//            }
+//            throw new UsernameNotFoundException("User : " + login + " not found");
+//        };
+//    }
 
 //    @Bean
 //    @Profile("prod")
@@ -53,62 +27,62 @@ public class SecurityConfig {
 //    }
 
 //    @Bean
-    public JwtAuthenticationConfigurer jwtAuthenticationConfigurer(
-            @Value("${jwt.access-token-key}") String accessTokenKey,
-            @Value("${jwt.refresh-token-key}") String refreshTokenKey,
-            JdbcTemplate jdbcTemplate
-    ) throws ParseException, JOSEException {
-        return new JwtAuthenticationConfigurer()
-                .accessTokenStringSerializer(new AccessTokenJwsStringSerializer(
-                        new MACSigner(OctetSequenceKey.parse(accessTokenKey))
-                ))
-                .refreshTokenStringSerializer(new RefreshTokenJweStringSerializer(
-                        new DirectEncrypter(OctetSequenceKey.parse(refreshTokenKey))
-                ))
-                .accessTokenStringDeserializer(new AccessTokenJwsStringDeserializer(
-                        new MACVerifier(OctetSequenceKey.parse(accessTokenKey))
-                ))
-                .refreshTokenStringDeserializer(new RefreshTokenJweStringDeserializer(
-                        new DirectDecrypter(OctetSequenceKey.parse(refreshTokenKey))
-                ))
-                .jdbcTemplate(jdbcTemplate);
-    }
+//    public JwtAuthenticationConfigurer jwtAuthenticationConfigurer(
+//            @Value("${jwt.access-token-key}") String accessTokenKey,
+//            @Value("${jwt.refresh-token-key}") String refreshTokenKey,
+//            JdbcTemplate jdbcTemplate
+//    ) throws ParseException, JOSEException {
+//        return new JwtAuthenticationConfigurer()
+//                .accessTokenStringSerializer(new AccessTokenJwsStringSerializer(
+//                        new MACSigner(OctetSequenceKey.parse(accessTokenKey))
+//                ))
+//                .refreshTokenStringSerializer(new RefreshTokenJweStringSerializer(
+//                        new DirectEncrypter(OctetSequenceKey.parse(refreshTokenKey))
+//                ))
+//                .accessTokenStringDeserializer(new AccessTokenJwsStringDeserializer(
+//                        new MACVerifier(OctetSequenceKey.parse(accessTokenKey))
+//                ))
+//                .refreshTokenStringDeserializer(new RefreshTokenJweStringDeserializer(
+//                        new DirectDecrypter(OctetSequenceKey.parse(refreshTokenKey))
+//                ))
+//                .jdbcTemplate(jdbcTemplate);
+//    }
 
 
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        return http
-                .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/**").permitAll()
-                        .requestMatchers("/rest/domain").permitAll()
-                        .requestMatchers("/rest/user").authenticated()
-                        .anyRequest().permitAll())
-
-                .cors(Customizer.withDefaults())
-                .formLogin(form -> form.loginProcessingUrl("/process_login").successHandler(new SuccessHandler()))
-                .csrf(AbstractHttpConfigurer::disable)
-                .build();
-    }
 //    @Bean
-    public SecurityFilterChain devFilterChain(HttpSecurity http,
-                                              JwtAuthenticationConfigurer jwtAuthenticationConfigurer,
-                                              CorsConfigurationSource corsConfigurationSource) throws Exception {
-        http
-                .httpBasic(Customizer.withDefaults())
-                .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/**").permitAll()
-                        .requestMatchers("/rest/domain").permitAll()
-                        .requestMatchers("/rest/user").authenticated()
-                        .anyRequest().permitAll())
-//                .sessionManagement(sessionManagement -> sessionManagement
-//                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .cors(Customizer.withDefaults())
-                .csrf(AbstractHttpConfigurer::disable);
-
-//        http.apply(jwtAuthenticationConfigurer);
-
-        return http.build();
-    }
+//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+//        return http
+//                .authorizeHttpRequests(authorize -> authorize
+//                        .requestMatchers("/**").permitAll()
+//                        .requestMatchers("/rest/domain").permitAll()
+//                        .requestMatchers("/rest/user").authenticated()
+//                        .anyRequest().permitAll())
+//
+//                .cors(Customizer.withDefaults())
+//                .formLogin(form -> form.loginProcessingUrl("/process_login").successHandler(new SuccessHandler()))
+//                .csrf(AbstractHttpConfigurer::disable)
+//                .build();
+//    }
+//    @Bean
+//    public SecurityFilterChain devFilterChain(HttpSecurity http,
+//                                              JwtAuthenticationConfigurer jwtAuthenticationConfigurer,
+//                                              CorsConfigurationSource corsConfigurationSource) throws Exception {
+//        http
+//                .httpBasic(Customizer.withDefaults())
+//                .authorizeHttpRequests(authorize -> authorize
+//                        .requestMatchers("/**").permitAll()
+//                        .requestMatchers("/rest/domain").permitAll()
+//                        .requestMatchers("/rest/user").authenticated()
+//                        .anyRequest().permitAll())
+////                .sessionManagement(sessionManagement -> sessionManagement
+////                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//                .cors(Customizer.withDefaults())
+//                .csrf(AbstractHttpConfigurer::disable);
+//
+////        http.apply(jwtAuthenticationConfigurer);
+//
+//        return http.build();
+//    }
 
 //    @Bean
 //    public TomcatContextCustomizer sameSiteCookiesConfig() {
@@ -119,18 +93,18 @@ public class SecurityConfig {
 //        };
 //    }
 
-    @Bean
-    CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "chrome-extension://coohjcphdfgbiolnekdpbcijmhambjff"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+//    @Bean
+//    CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "chrome-extension://coohjcphdfgbiolnekdpbcijmhambjff"));
+//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
+//        configuration.setAllowedHeaders(List.of("*"));
+//        configuration.setExposedHeaders(List.of("*"));
+//        configuration.setAllowCredentials(true);
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
 
 //    @Bean
 //    public ServletWebServerFactory servletContainer() {
